--- a/hardware.css
+++ b/hardware.css
@@ -1,4 +1,4 @@
-body {
+v body {
   background-image:url("http://img1.wikia.nocookie.net/__cb20110306191618/matrix/images/9/9c/Matrix_Code.gif");
   text-align:center;
 }
