--- a/navbar.css
+++ b/navbar.css
@@ -11,6 +11,27 @@ root {
     display: block;
 }
 
-#navbar {
-    color: blue;
-}
+#navbar ul {
+	margin: 0;
+	padding: 10px;
+	list-style-type: none;
+	text-align: center;
+	background-color: #000;
+	}
+ 
+#navbar ul li {
+	display: inline;
+	}
+ 
+#navbar ul li a {
+	text-decoration: none;
+	padding: .2em 1em;
+	color: #fff;
+	background-color: #001;
+	}
+ 
+#navbar ul li a:hover {
+	color: #000;
+	background-color: #fff;
+	}
+
